--- a/.github/workflows/ci.yaml
+++ b/.github/workflows/ci.yaml
@@ -3,6 +3,7 @@ on:
   push:
     branches:
       - "main"
+      - "backend-indexing"
   pull_request:
     branches:
       - "main"
@@ -12,6 +13,7 @@ on:
       - '/*'  # covers files such as `pyproject.toml`
       - 'properties/**'
       - 'xarray/**'
+      - "backend-indexing"
   workflow_dispatch: # allows you to trigger manually
 
 concurrency:
