CI: python 3.12 by default. (#8969)
* CI: python 3.12 by default.

Now that numba supports 3.12.

* limit flaky test run

* More flaky marks

* Use PYTEST_ADDOPTS

* More Nio cleanup

* cleanup

* disable pint

* More bumps

* Ignore pint if not installed

* skip mypy bump

--- a/pyproject.toml
+++ b/pyproject.toml
@@ -117,13 +117,13 @@ module = [
   "iris.*",
   "matplotlib.*",
   "mpl_toolkits.*",
-  "Nio.*",
   "nc_time_axis.*",
   "numbagg.*",
   "netCDF4.*",
   "netcdftime.*",
   "opt_einsum.*",
   "pandas.*",
+  "pint.*",
   "pooch.*",
   "pyarrow.*",
   "pydap.*",
