avoid a couple of warnings in `polyfit` (#8939)
* use `numpy.finfo` instead of `numpy.core.finfo`

* add `copy` to the signature of `__array__`

* don't pass `copy` to `asarray`

The `copy` kwarg appears to only exist in `numpy>=2`.

* try making the typing the same for all overloads

* change the typing for `NamedArray.__array__`

* fix the signature of `__array__`

* revert the change to the signature of `__array__`

* ignore all deprecation warnings about `__array__` gaining a new kwarg

I don't know enough about typing to ignore typing issues within a
protocol, so that was the only way I could figure out how to get this
PR unstuck. Once we know what to do here, we can remove the ignore in
a new PR.

* add back the `copy` kwarg if the protocol does not have type hints

* Update xarray/core/dataset.py

---------

Co-authored-by: Deepak Cherian <dcherian@users.noreply.github.com>

--- a/pyproject.toml
+++ b/pyproject.toml
@@ -330,6 +330,8 @@ filterwarnings = [
   "default:Using a non-tuple sequence for multidimensional indexing is deprecated:FutureWarning",
   "default:Duplicate dimension names present:UserWarning:xarray.namedarray.core",
   "default:::xarray.tests.test_strategies",
+  # TODO: remove once we know how to deal with a changed signature in protocols
+  "ignore:__array__ implementation doesn't accept a copy keyword, so passing copy=False failed.",
 ]
 
 log_cli_level = "INFO"
