Apply suggestions from code review
Co-authored-by: Maximilian Roos <5635139+max-sixty@users.noreply.github.com>

--- a/.github/workflows/ci-additional.yaml
+++ b/.github/workflows/ci-additional.yaml
@@ -8,6 +8,9 @@ on:
       - "main"
     paths:
       - 'ci/**'
+      - '.github/**'
+      - '/*'  # covers files such as `pyproject.toml`
+      - 'properties/**'
       - 'xarray/**'
   workflow_dispatch: # allows you to trigger manually
 
