DAS-2155 - Merge datatree documentation into main docs.

--- a/ci/requirements/doc.yml
+++ b/ci/requirements/doc.yml
@@ -37,7 +37,8 @@ dependencies:
   - sphinx-copybutton
   - sphinx-design
   - sphinx-inline-tabs
-  - sphinx>=5.0
+  - sphinx=6.2.1  # sphinx-book-theme issue: 749
+  - sphinxcontrib-srclinks
   - sphinxext-opengraph
   - sphinxext-rediraffe
   - zarr>=2.10
