--- a/ci/requirements/doc.yml
+++ b/ci/requirements/doc.yml
@@ -20,6 +20,7 @@ dependencies:
   - matplotlib-base
   - nbsphinx
   - netcdf4>=1.5
+  - ntv-pandas>=2.0.0
   - numba
   - numpy>=1.21
   - packaging>=21.3
