--- a/.github/workflows/ci-additional.yaml
+++ b/.github/workflows/ci-additional.yaml
@@ -77,6 +77,8 @@ jobs:
           conda list
           python xarray/util/print_versions.py
       - name: Run doctests
+        env:
+          TERM: xterm-256color
         run: |
           # Raise an error if there are warnings in the doctests, with `-Werror`.
           # This is a trial; if it presents an problem, feel free to remove.
@@ -129,6 +131,8 @@ jobs:
           python -m pip install "mypy<1.9" --force-reinstall
 
       - name: Run mypy
+        env:
+          TERM: xterm-256color
         run: |
           python -m mypy --install-types --non-interactive --cobertura-xml-report mypy_report xarray/
 
@@ -179,6 +183,8 @@ jobs:
           conda list
           python xarray/util/print_versions.py
       - name: Install mypy
+        env:
+          TERM: xterm-256color
         run: |
           python -m pip install "mypy<1.9" --force-reinstall
 
@@ -342,9 +348,13 @@ jobs:
             python-dateutil
 
       - name: All-deps minimum versions policy
+        env:
+          TERM: xterm-256color
         run: |
           python ci/min_deps_check.py ci/requirements/min-all-deps.yml
 
       - name: Bare minimum versions policy
+        env:
+          TERM: xterm-256color
         run: |
           python ci/min_deps_check.py ci/requirements/bare-minimum.yml
