--- a/.github/workflows/upstream-dev-ci.yaml
+++ b/.github/workflows/upstream-dev-ci.yaml
@@ -83,6 +83,8 @@ jobs:
       - name: Run Tests
         if: success()
         id: status
+        env:
+          TERM: xterm-256color
         run: |
           python -m pytest --timeout=60 -rf \
             --report-log output-${{ matrix.python-version }}-log.jsonl
@@ -140,6 +142,8 @@ jobs:
         run: |
           python -m pip install mypy --force-reinstall
       - name: Run mypy
+        env:
+          TERM: xterm-256color
         run: |
           python -m mypy --install-types --non-interactive --cobertura-xml-report mypy_report
       - name: Upload mypy coverage to Codecov
