--- a/.github/workflows/ci.yaml
+++ b/.github/workflows/ci.yaml
@@ -7,12 +7,11 @@ on:
     branches:
       - "main"
     paths:
-      - "ci/**"
-      - ".github/**"
-      - "/*" # covers files such as `pyproject.toml`
-      - "/.*" # ...and dotfiles in the root such as `.pre-commit-config.yaml`
-      - "properties/**"
-      - "xarray/**"
+      - 'ci/**'
+      - '.github/**'
+      - '/*'  # covers files such as `pyproject.toml`
+      - 'properties/**'
+      - 'xarray/**'
   workflow_dispatch: # allows you to trigger manually
 
 concurrency:
@@ -54,7 +53,7 @@ jobs:
       matrix:
         os: ["ubuntu-latest", "macos-latest", "windows-latest"]
         # Bookend python versions
-        python-version: ["3.9", "3.12"]
+        python-version: ["3.9",  "3.12"]
         env: [""]
         include:
           # Minimum python version:
