disallow commits to main as pre-commit-hook

--- a/.pre-commit-config.yaml
+++ b/.pre-commit-config.yaml
@@ -11,6 +11,8 @@ repos:
       - id: check-yaml
       - id: debug-statements
       - id: mixed-line-ending
+      - id: no-commit-to-branch
+        args: ['--branch', 'main']
   - repo: https://github.com/astral-sh/ruff-pre-commit
     # Ruff version.
     rev: 'v0.4.7'
