--- a/.pre-commit-config.yaml
+++ b/.pre-commit-config.yaml
@@ -7,7 +7,7 @@ repos:
     rev: v4.6.0
     hooks:
       - id: no-commit-to-branch
-        args: ['--branch', 'main']
+        name: don't commit to main
       - id: trailing-whitespace
       - id: end-of-file-fixer
       - id: check-yaml
