--- a/.github/workflows/array-api-tests.yml
+++ b/.github/workflows/array-api-tests.yml
@@ -1,32 +1,44 @@
-name: Test NamedArray._array_api
+name: Array API Tests
 
 on: [push, pull_request]
 
-jobs:
-  build:
+env:
+  PYTEST_ARGS: "-v -rxXfE --ci --hypothesis-disable-deadline --max-examples 200"
+  API_VERSIONS: "2023.12"
 
+jobs:
+  array-api-tests:
     runs-on: ubuntu-latest
     strategy:
       matrix:
-        python-version: ["3.12"]
+        python-version: ['3.12']
+        exclude:
+          - python-version: '3.8'
 
     steps:
-    - name: Checkout array-api-tests
-      uses: actions/checkout@v1
+    - name: Checkout xarray
+      uses: actions/checkout@v4
       with:
+        path: xarray
+    - name: Checkout array-api-tests
+      uses: actions/checkout@v4
+      with:
+        repository: data-apis/array-api-tests
         submodules: 'true'
+        path: array-api-tests
     - name: Set up Python ${{ matrix.python-version }}
-      uses: actions/setup-python@v1
+      uses: actions/setup-python@v5
       with:
         python-version: ${{ matrix.python-version }}
-    - name: Install dependencies
+    - name: Install Dependencies
       run: |
         python -m pip install --upgrade pip
-        python -m pip install xarray
-        python -m pip install -r requirements.txt
-    - name: Run the test suite
+        python -m pip install ${GITHUB_WORKSPACE}/xarray
+        python -m pip install -r ${GITHUB_WORKSPACE}/array-api-tests/requirements.txt
+        python -m pip install hypothesis
+    - name: Run the array API testsuite
       env:
         ARRAY_API_TESTS_MODULE: xarray.namedarray._array_api
-        ARRAY_API_STRICT_API_VERSION: 2023.12
       run: |
-        pytest -v -rxXfE array_api_tests/
+        cd ${GITHUB_WORKSPACE}/array-api-tests
+        pytest array_api_tests/ ${PYTEST_ARGS}
