--- a/.github/workflows/array-api-tests.yml
+++ b/.github/workflows/array-api-tests.yml
@@ -19,7 +19,7 @@ jobs:
     - name: Checkout xarray
       uses: actions/checkout@v4
       with:
-        path: xarray
+        path: xarray-tests
     - name: Checkout array-api-tests
       uses: actions/checkout@v4
       with:
