--- a/.github/workflows/array-api-tests.yml
+++ b/.github/workflows/array-api-tests.yml
@@ -36,6 +36,7 @@ jobs:
         python -m pip install ${GITHUB_WORKSPACE}/xarray
         python -m pip install -r ${GITHUB_WORKSPACE}/array-api-tests/requirements.txt
         python -m pip install hypothesis
+        python -m pip install array-api-strict
     - name: Run the array API testsuite
       env:
         ARRAY_API_TESTS_MODULE: xarray.namedarray._array_api
