[skip-ci] Try speeding up docs build
Following https://pydata-sphinx-theme.readthedocs.io/en/stable/user_guide/performance.html

--- a/ci/requirements/doc.yml
+++ b/ci/requirements/doc.yml
@@ -44,5 +44,6 @@ dependencies:
   - zarr>=2.10
   - pip:
       - sphinxcontrib-mermaid
+      - sphinx-remove-toctrees
       # relative to this file. Needs to be editable to be accepted.
       - -e ../..
