[skip-ci] Speed up docs build by limiting toctrees (#9395)
* [skip-ci] Try speeding up docs build

Following https://pydata-sphinx-theme.readthedocs.io/en/stable/user_guide/performance.html

* bump to 3.12

* [skip-ci] latest mamba

* Use mamba

* revert navigation_depth  change

--- a/ci/requirements/doc.yml
+++ b/ci/requirements/doc.yml
@@ -4,7 +4,7 @@ channels:
   - conda-forge
   - nodefaults
 dependencies:
-  - python=3.10
+  - python=3.12
   - bottleneck
   - cartopy
   - cfgrib
@@ -40,6 +40,7 @@ dependencies:
   - sphinx-design
   - sphinx-inline-tabs
   - sphinx>=5.0
+  - sphinx-remove-toctrees
   - sphinxext-opengraph
   - sphinxext-rediraffe
   - zarr>=2.10
