--- a/.github/workflows/ci-additional.yaml
+++ b/.github/workflows/ci-additional.yaml
@@ -127,7 +127,7 @@ jobs:
 
       - name: Run mypy
         run: |
-          python -m mypy --install-types --non-interactive --cobertura-xml-report mypy_report xarray/
+          python -m mypy --install-types --non-interactive --cobertura-xml-report mypy_report
 
       - name: Upload mypy coverage to Codecov
         uses: codecov/codecov-action@v4.5.0
@@ -138,7 +138,7 @@ jobs:
           name: codecov-umbrella
           fail_ci_if_error: false
 
-  mypy39:
+  mypy-min:
     name: Mypy 3.10
     runs-on: "ubuntu-latest"
     needs: detect-ci-trigger
@@ -181,7 +181,7 @@ jobs:
 
       - name: Run mypy
         run: |
-          python -m mypy --install-types --non-interactive --cobertura-xml-report mypy_report xarray/
+          python -m mypy --install-types --non-interactive --cobertura-xml-report mypy_report
 
       - name: Upload mypy coverage to Codecov
         uses: codecov/codecov-action@v4.5.0
