--- a/.github/workflows/ci-additional.yaml
+++ b/.github/workflows/ci-additional.yaml
@@ -123,7 +123,7 @@ jobs:
           python xarray/util/print_versions.py
       - name: Install mypy
         run: |
-          python -m pip install "mypy<1.9" --force-reinstall
+          python -m pip install "mypy" --force-reinstall
 
       - name: Run mypy
         run: |
@@ -177,7 +177,7 @@ jobs:
           python xarray/util/print_versions.py
       - name: Install mypy
         run: |
-          python -m pip install "mypy<1.9" --force-reinstall
+          python -m pip install "mypy" --force-reinstall
 
       - name: Run mypy
         run: |
@@ -187,22 +187,20 @@ jobs:
         uses: codecov/codecov-action@v4.5.0
         with:
           file: mypy_report/cobertura.xml
-          flags: mypy39
+          flags: mypy-min
           env_vars: PYTHON_VERSION
           name: codecov-umbrella
           fail_ci_if_error: false
-
-
 
   pyright:
     name: Pyright
     runs-on: "ubuntu-latest"
     needs: detect-ci-trigger
     if: |
-        always()
-        && (
-            contains( github.event.pull_request.labels.*.name, 'run-pyright')
-        )
+      always()
+      && (
+          contains( github.event.pull_request.labels.*.name, 'run-pyright')
+      )
     defaults:
       run:
         shell: bash -l {0}
@@ -258,10 +256,10 @@ jobs:
     runs-on: "ubuntu-latest"
     needs: detect-ci-trigger
     if: |
-        always()
-        && (
-            contains( github.event.pull_request.labels.*.name, 'run-pyright')
-        )
+      always()
+      && (
+          contains( github.event.pull_request.labels.*.name, 'run-pyright')
+      )
     defaults:
       run:
         shell: bash -l {0}
@@ -311,8 +309,6 @@ jobs:
           env_vars: PYTHON_VERSION
           name: codecov-umbrella
           fail_ci_if_error: false
-
-
 
   min-version-policy:
     name: Minimum Version Policy
