DAS-2155: Drop sphinx back even further.
The ci/requirements/doc.yaml wouldn't resolve with the pin to 6.2.1 because
docutils requirement docutils >=0.18.1,<0.20  but there are no viable
options.

--- a/ci/requirements/doc.yml
+++ b/ci/requirements/doc.yml
@@ -39,7 +39,7 @@ dependencies:
   - sphinx-copybutton
   - sphinx-design
   - sphinx-inline-tabs
-  - sphinx=6.2.1  # sphinx-book-theme issue: 749
+  - sphinx>=5.0
   - sphinxcontrib-srclinks
   - sphinx-remove-toctrees
   - sphinxext-opengraph
