--- a/pyproject.toml
+++ b/pyproject.toml
@@ -247,13 +247,13 @@ extend-exclude = [
 extend-safe-fixes = [
   "TID252", # absolute imports
 ]
-ignore = [
+extend-ignore = [
   "E402",
   "E501",
   "E731",
   "UP007",
 ]
-select = [
+extend-select = [
   "F", # Pyflakes
   "E", # Pycodestyle
   "W",
