Repo review bugbear (#9505)
* Use ignore instead of extend-ignore for ruff

* Fix B028 no explicit stacklevel in warnings.warn

* Fix B006, B007 and B011 (auto-fixes)

* B006: mutable argument default
* B007: unused loop control variable
* B011: assert false

* Fix the remaining B006 and B007 manually

* Fix B015: pointless comparisons

* Fix B017: pytest.raises(Exception)

* Fix B023: function definition does not bind loop variable

* Fix B005: strip with multicharacter strings

* Fix B020: loop control variable overrides iterable

* Fix B008: no function call in argument defaults

* Fix B018: useless expression

* Fix B904: raise from within except

* Finally enable ruff bugbear lints

* Fix readthedocs

--- a/pyproject.toml
+++ b/pyproject.toml
@@ -246,13 +246,14 @@ extend-exclude = [
 extend-safe-fixes = [
   "TID252", # absolute imports
 ]
-extend-ignore = [
+ignore = [
   "E402",
   "E501",
   "E731",
   "UP007",
 ]
 extend-select = [
+  "B", # flake8-bugbear
   "F", # Pyflakes
   "E", # Pycodestyle
   "W",
