--- a/pyproject.toml
+++ b/pyproject.toml
@@ -125,6 +125,7 @@ module = [
   "netCDF4.*",
   "netcdftime.*",
   "opt_einsum.*",
+  "pandas.*",
   "pint.*",
   "pooch.*",
   "pyarrow.*",
@@ -178,7 +179,7 @@ module = [
   "xarray.tests.test_units",
   "xarray.tests.test_utils",
   "xarray.tests.test_variable",
-  "xarray.tests.test_weighted",
+  "xarray.tests.test_weighted"
 ]
 
 # Use strict = true whenever namedarray has become standalone. In the meantime
