--- a/.github/workflows/ci-additional.yaml
+++ b/.github/workflows/ci-additional.yaml
@@ -61,7 +61,6 @@ jobs:
           environment-name: xarray-tests
           create-args: >-
             python=${{env.PYTHON_VERSION}}
-            conda
           cache-environment: true
           cache-environment-key: "${{runner.os}}-${{runner.arch}}-py${{env.PYTHON_VERSION}}-${{env.TODAY}}-${{hashFiles(env.CONDA_ENV_FILE)}}"
 
@@ -70,8 +69,6 @@ jobs:
           python -m pip install --no-deps -e .
       - name: Version info
         run: |
-          conda info -a
-          conda list
           python xarray/util/print_versions.py
       - name: Run doctests
         run: |
@@ -109,7 +106,6 @@ jobs:
           environment-name: xarray-tests
           create-args: >-
             python=${{env.PYTHON_VERSION}}
-            conda
           cache-environment: true
           cache-environment-key: "${{runner.os}}-${{runner.arch}}-py${{env.PYTHON_VERSION}}-${{env.TODAY}}-${{hashFiles(env.CONDA_ENV_FILE)}}"
       - name: Install xarray
@@ -117,8 +113,6 @@ jobs:
           python -m pip install --no-deps -e .
       - name: Version info
         run: |
-          conda info -a
-          conda list
           python xarray/util/print_versions.py
       - name: Install mypy
         run: |
@@ -163,7 +157,6 @@ jobs:
           environment-name: xarray-tests
           create-args: >-
             python=${{env.PYTHON_VERSION}}
-            conda
           cache-environment: true
           cache-environment-key: "${{runner.os}}-${{runner.arch}}-py${{env.PYTHON_VERSION}}-${{env.TODAY}}-${{hashFiles(env.CONDA_ENV_FILE)}}"
       - name: Install xarray
@@ -171,8 +164,6 @@ jobs:
           python -m pip install --no-deps -e .
       - name: Version info
         run: |
-          conda info -a
-          conda list
           python xarray/util/print_versions.py
       - name: Install mypy
         run: |
@@ -222,7 +213,6 @@ jobs:
           environment-name: xarray-tests
           create-args: >-
             python=${{env.PYTHON_VERSION}}
-            conda
           cache-environment: true
           cache-environment-key: "${{runner.os}}-${{runner.arch}}-py${{env.PYTHON_VERSION}}-${{env.TODAY}}-${{hashFiles(env.CONDA_ENV_FILE)}}"
       - name: Install xarray
@@ -230,8 +220,6 @@ jobs:
           python -m pip install --no-deps -e .
       - name: Version info
         run: |
-          conda info -a
-          conda list
           python xarray/util/print_versions.py
       - name: Install pyright
         run: |
@@ -281,7 +269,6 @@ jobs:
           environment-name: xarray-tests
           create-args: >-
             python=${{env.PYTHON_VERSION}}
-            conda
           cache-environment: true
           cache-environment-key: "${{runner.os}}-${{runner.arch}}-py${{env.PYTHON_VERSION}}-${{env.TODAY}}-${{hashFiles(env.CONDA_ENV_FILE)}}"
       - name: Install xarray
@@ -289,8 +276,6 @@ jobs:
           python -m pip install --no-deps -e .
       - name: Version info
         run: |
-          conda info -a
-          conda list
           python xarray/util/print_versions.py
       - name: Install pyright
         run: |
@@ -330,8 +315,8 @@ jobs:
           create-args: >-
             python=3.12
             pyyaml
-            conda
             python-dateutil
+            libmambapy
 
       - name: All-deps minimum versions policy
         run: |
