Move to micromamba 2

--- a/.github/workflows/ci-additional.yaml
+++ b/.github/workflows/ci-additional.yaml
@@ -14,6 +14,7 @@ concurrency:
 
 env:
   FORCE_COLOR: 3
+  MICROMAMBA_VERSION: "2.0.2-2"
 
 jobs:
   detect-ci-trigger:
@@ -57,6 +58,7 @@ jobs:
       - name: Setup micromamba
         uses: mamba-org/setup-micromamba@v2
         with:
+          micromamba-version: ${{env.MICROMAMBA_VERSION}}
           environment-file: ${{env.CONDA_ENV_FILE}}
           environment-name: xarray-tests
           create-args: >-
@@ -102,6 +104,7 @@ jobs:
       - name: Setup micromamba
         uses: mamba-org/setup-micromamba@v2
         with:
+          micromamba-version: ${{env.MICROMAMBA_VERSION}}
           environment-file: ${{env.CONDA_ENV_FILE}}
           environment-name: xarray-tests
           create-args: >-
@@ -153,6 +156,7 @@ jobs:
       - name: Setup micromamba
         uses: mamba-org/setup-micromamba@v2
         with:
+          MICROMAMBA_VERSION: ${{env.MICROMAMBA_VERSION}}
           environment-file: ${{env.CONDA_ENV_FILE}}
           environment-name: xarray-tests
           create-args: >-
@@ -209,6 +213,7 @@ jobs:
       - name: Setup micromamba
         uses: mamba-org/setup-micromamba@v2
         with:
+          MICROMAMBA_VERSION: ${{env.MICROMAMBA_VERSION}}
           environment-file: ${{env.CONDA_ENV_FILE}}
           environment-name: xarray-tests
           create-args: >-
@@ -265,6 +270,7 @@ jobs:
       - name: Setup micromamba
         uses: mamba-org/setup-micromamba@v2
         with:
+          MICROMAMBA_VERSION: ${{env.MICROMAMBA_VERSION}}
           environment-file: ${{env.CONDA_ENV_FILE}}
           environment-name: xarray-tests
           create-args: >-
@@ -311,6 +317,7 @@ jobs:
       - name: Setup micromamba
         uses: mamba-org/setup-micromamba@v2
         with:
+          MICROMAMBA_VERSION: ${{env.MICROMAMBA_VERSION}}
           environment-name: xarray-tests
           create-args: >-
             python=3.12
