--- a/.github/workflows/ci-additional.yaml
+++ b/.github/workflows/ci-additional.yaml
@@ -156,7 +156,7 @@ jobs:
       - name: Setup micromamba
         uses: mamba-org/setup-micromamba@v2
         with:
-          MICROMAMBA_VERSION: ${{env.MICROMAMBA_VERSION}}
+          micromamba-version: ${{env.MICROMAMBA_VERSION}}
           environment-file: ${{env.CONDA_ENV_FILE}}
           environment-name: xarray-tests
           create-args: >-
@@ -213,7 +213,7 @@ jobs:
       - name: Setup micromamba
         uses: mamba-org/setup-micromamba@v2
         with:
-          MICROMAMBA_VERSION: ${{env.MICROMAMBA_VERSION}}
+          micromamba-version: ${{env.MICROMAMBA_VERSION}}
           environment-file: ${{env.CONDA_ENV_FILE}}
           environment-name: xarray-tests
           create-args: >-
@@ -270,7 +270,7 @@ jobs:
       - name: Setup micromamba
         uses: mamba-org/setup-micromamba@v2
         with:
-          MICROMAMBA_VERSION: ${{env.MICROMAMBA_VERSION}}
+          micromamba-version: ${{env.MICROMAMBA_VERSION}}
           environment-file: ${{env.CONDA_ENV_FILE}}
           environment-name: xarray-tests
           create-args: >-
@@ -317,7 +317,7 @@ jobs:
       - name: Setup micromamba
         uses: mamba-org/setup-micromamba@v2
         with:
-          MICROMAMBA_VERSION: ${{env.MICROMAMBA_VERSION}}
+          micromamba-version: ${{env.MICROMAMBA_VERSION}}
           environment-name: xarray-tests
           create-args: >-
             python=3.12
