Enforce ruff/flake8-pie rules (PIE) (#9740)
* Apply ruff/flake8-pie rule PIE800

PIE800 Unnecessary spread `**`

* Apply ruff/flake8-pie rule PIE804

PIE804 Unnecessary `dict` kwargs

* Apply ruff/flake8-pie rule PIE808

PIE808 Unnecessary `start` argument in `range`

* Enforce ruff/flake8-pie rules (PIE)

--- a/pyproject.toml
+++ b/pyproject.toml
@@ -247,6 +247,7 @@ ignore = [
   "E731",
   "UP007",
   "PERF20",
+  "PIE790",  # unnecessary pass statement
   "RUF001",
   "RUF002",
   "RUF003",
@@ -262,6 +263,7 @@ extend-select = [
   "TID", # flake8-tidy-imports (absolute imports)
   "I", # isort
   "PERF", # Perflint
+  "PIE", # flake8-pie
   "PGH", # pygrep-hooks
   "RUF",
   "UP", # Pyupgrade
