install `rich-click`

--- a/.github/workflows/ci-additional.yaml
+++ b/.github/workflows/ci-additional.yaml
@@ -318,6 +318,7 @@ jobs:
             python-dateutil
             cytoolz
             rich
+            rich-click
             py-rattler
 
       - name: All-deps minimum versions policy
