try installing `dask` + `distributed`

--- a/ci/requirements/environment-3.13.yml
+++ b/ci/requirements/environment-3.13.yml
@@ -9,9 +9,9 @@ dependencies:
   - bottleneck
   - cartopy
   - cftime
-  # - dask-core
-  # - dask-expr
-  # - distributed
+  - dask-core
+  - dask-expr
+  - distributed
   - flox
   - fsspec
   - h5netcdf
