add jax to complete ci envs

--- a/ci/requirements/environment.yml
+++ b/ci/requirements/environment.yml
@@ -49,3 +49,5 @@ dependencies:
   - toolz
   - typing_extensions
   - zarr
+  - pip:
+      - jax # no way to get cpu-only jaxlib from conda if gpu is present
