add lithops as requirement and to CI

--- a/ci/requirements/environment-3.13.yml
+++ b/ci/requirements/environment-3.13.yml
@@ -19,6 +19,7 @@ dependencies:
   - hdf5
   - hypothesis
   - iris
+  - lithops
   - lxml # Optional dep of pydap
   - matplotlib-base
   - nc-time-axis
