--- a/ci/requirements/environment-windows-3.13.yml
+++ b/ci/requirements/environment-windows-3.13.yml
@@ -18,6 +18,7 @@ dependencies:
   - hypothesis
   - iris
   - lxml # Optional dep of pydap
+  - lithops
   - matplotlib-base
   - nc-time-axis
   - netcdf4
