Explicitely add pyarrow to windows builds, as importing dask.dataframe (dask>=2025.1.0) raises ImportError when missing.

--- a/ci/requirements/environment-windows-3.13.yml
+++ b/ci/requirements/environment-windows-3.13.yml
@@ -29,6 +29,7 @@ dependencies:
   # - pint>=0.22
   - pip
   - pre-commit
+  - pyarrow # importing dask.dataframe raises an ImportError without this
   - pydap
   - pytest
   - pytest-cov
