explicitly install `pyarrow`

--- a/ci/requirements/environment-3.13.yml
+++ b/ci/requirements/environment-3.13.yml
@@ -33,7 +33,8 @@ dependencies:
   - pip
   - pooch
   - pre-commit
-  # - pydap
+  - pyarrow # pandas raises a deprecation warning without this, breaking doctests
+  - pydap
   - pytest
   - pytest-cov
   - pytest-env
